refactor new version of mnnchat android